governance/baselines/2.1.0/references/11-output-artifact-rules.md
# 输出物生成与管理规则

本规则管理 AI 生成的对外文件（周报、月报、会议纪要、Excel、Word、PDF 等），明确生成物与事实源的边界。

---

## 1. 输出物定义

| 类型 | 说明 | 就是/并不是 |
|---|---|---|
| 输出物（Artifact） | AI 为用户生成的外部文件 | 是：报表、汇报材料、导出的文件 |
| 事实源（Source of Truth） | `ai/` 目录下的管理记录 | 不是：输出物；输出物需确认后才归档为事实源 |

## 2. 输出物分类

| 分类 | 示例 | 生命周期 |
|---|---|---|
| 文档类 | 周报、月报、会议纪要、评审纪要、需求文档 | 草稿 → 确认 → 导出/归档 |
| 数据类 | Excel、CSV、预算表 | 草稿 → 确认 → 导出 |
| 演示类 | PPT、汇报材料 | 草稿 → 确认 → 导出 |

## 3. 批次目录结构

每个生成请求在 `ai/outputs/` 下创建独立批次目录（v2.1.0 起 outputs/ 移入 `ai/` 内，工作区根目录不再有 outputs/）：

```
ai/outputs/{YYYYMMDDHHMMSS}/
├── draft.md          # 草稿
├── final.md          # 用户确认后的最终版
├── manifest.md       # 来源追溯清单
├── revisions/        # 修改记录
│   └── rev-NNN.md
└── files/            # 导出文件
```

**命名示例：** `ai/outputs/20260809165540/draft.md`、`project-deletion/draft.md`（可加序号后缀 `-NNN` 区分同批次多个输出物）。

## 4. 触发表达

| 触发词 | 说明 |
|---|---|
| 帮我生成周报 / 生成周报 / 导出周报 | 周报生成 |
| 生成月报 / 生成日报 | 日报/月报生成 |
| 生成会议纪要 / 整理成会议纪要 | 会议纪要生成 |
| 生成需求评审纪要 / 生成设计评审纪要 | 评审纪要生成 |
| 生成Excel / 生成Word / 生成PDF | 指定格式生成 |
| 导出Excel / 导出文件 / 导出报表 | 文件导出 |
| 做一份汇报材料 / 出个表 / 出个报告 | 汇报材料生成 |
| 整理成文件 | 通用文件生成 |

---

## 5. 生成流程

### 5.1 默认流程

1. 读取 `project-brief.md` 和相关事实源
2. 创建输出批次目录 `ai/outputs/{timestamp}/`
3. 生成 Markdown 草稿 → `draft.md`
4. 等待用户确认
5. 用户确认后 → `final.md`
6. 导出为指定文件格式 → `files/`
7. 询问是否归档到 `ai/` 事实源

**默认不得在用户未确认前生成正式版本文件。**

### 5.2 格式确认规则

当用户只说"生成周报""生成报告"等描述性请求时，AI 应询问输出方式：①先生成 Markdown 草稿，确认后导出（推荐）；②直接生成 Markdown；③/④/⑤生成 Excel / Word / PDF；⑥同时生成多种格式。若用户明确指定格式，则无需询问，但仍应在导出前确认。

### 5.3 多轮修改规则

同一次生成请求的多轮修改**必须复用同一个批次目录**。例如"帮我生成周报"创建 `ai/outputs/20260809165540/`，后续"压缩风险部分""调整结构"等修改均写入 `ai/outputs/20260809165540/revisions/rev-NNN.md`。**不得为普通修改创建新的时间戳批次目录**；仅当用户明确说"重新生成"或"另出一版"时才新建批次目录。

### 5.4 修改时的文件处理

- 修改草稿阶段：只更新 `draft.md` + 追加 `revisions/rev-NNN.md`，不重新生成 `files/` 下文件。
- 用户确认后：写入 `final.md`，再生成/覆盖 `files/` 下文件。

---

## 6. 输出状态

| 状态 | 说明 |
|---|---|
| `初稿` | 已生成初稿 |
| `待确认` | 等待用户确认 |
| `修改中` | 用户正在修改 |
| `已定稿` | 内容已确认 |
| `已导出` | 已导出文件 |
| `已归档` | 已归档到 ai/ 事实源 |
| `已取消` | 用户取消 |

---

## 7. 生成物索引

`ai/outputs/index.md` 记录所有生成批次：

| Batch ID | Created At | Request | Type | Status | Main File | Related AI File |
|---|---|---|---|---|---|---|
| 20260809165540 | 2026-08-09 16:55:40 | 帮我生成周报 | portfolio_weekly_report | draft | ai/outputs/20260809165540/draft.md | pending |

每次创建、修改、导出或归档输出物时，必须同步更新 `ai/outputs/index.md`。

---

## 8. 来源追溯

所有生成物必须在 `manifest.md` 中记录来源文件（如项目集周报的来源含各子项目周报、项目集风险、人员资源等）。**不得生成无来源记录的正式文件。**

---

## 9. 事实源边界

| 目录 | 存什么 | 性质 |
|---|---|---|
| `ai/` | 事实源、规则、模板、项目管理记录 | 事实源（需确认更新） |
| `ai/outputs/` | 生成的文档、Excel、Word、PDF、草稿、导出结果 | 生成物（草稿可自由迭代） |
| 业务子项目目录 | 业务代码、原始业务资料、交付物 | 业务文件（不侵入） |

> v2.1.0 起 `outputs/` 位于 `ai/` 目录内（`ai/outputs/`），但其性质仍是生成物而非事实源：生成物不得作为任何查询/聚合的数据源。

**生成报告 ≠ 更新事实源。** 默认先生成 `ai/outputs/` 草稿，用户确认后再询问是否归档到 `ai/` 事实源目录。

---

## 10. 归档规则

| 内容类型 | 归档路径 |
|---|---|
| 项目集周报 | `ai/portfolio/reports/weekly/{year}/` |
| 子项目周报 | `ai/projects/{project}/reports/weekly/{year}/` |
| 项目集会议纪要 | `ai/portfolio/meetings/{year}/` |
| 子项目会议纪要 | `ai/projects/{project}/meetings/{year}/` |
| 需求评审纪要 | `ai/projects/{project}/meetings/{year}/` 或 `reviews/` |
| 设计评审纪要 | `ai/projects/{project}/reviews/` |
| P&L 导出 | `ai/outputs/`（必要时更新 `ai/portfolio/plans/budget.md`）|

归档时必须询问用户确认，给出目标路径（如 `ai/portfolio/reports/weekly/2026/2026-W33-市监重构项目集周报.md`）。

---

## 11. 确认规则

| 操作 | 是否需要确认 |
|---|---|
| 创建输出批次目录 | 不需要 |
| 生成 Markdown 草稿 | 不需要 |
| 多轮修改草稿 | 不需要 |
| 导出 Excel/Word/PDF | 需要确认（除非用户明确指定格式） |
| 归档到 ai/ 事实源 | 必须确认 |
| 覆盖已有输出文件 | 必须确认 |
| 删除或取消输出批次 | 必须确认 |
| 修改 final.md | 不允许（应创建新批次） |

---

## 12. 未确认处理

用户长期未确认时，输出批次保持 `待确认` 状态，不自动删除。AI 可在后续查询中提示存在未确认批次（列出 Batch ID/类型/创建时间/状态）并询问"是否继续处理或取消？"。

---

## 13. 文件命名规则

### 13.1 输出批次目录

`ai/outputs/{YYYYMMDDHHMMSS}/`；需区分序号时用 `ai/outputs/{YYYYMMDDHHMMSS}-NNN/`。

### 13.2 导出文件命名

格式：`{scope}-{document_type}-{period_or_date}-{version}.{ext}`

| 字段 | 说明 | 示例 |
|---|---|---|
| scope | 项目集或子项目名称 | 市监重构项目集 / 全链通重构 |
| document_type | 文档类型 | 周报 / 月报 / 需求评审纪要 |
| period_or_date | 周期或日期 | 2026-W33 / 20260809 |
| version | 版本号 | v0.1 / v1.0 |

### 13.3 版本规则

| 版本 | 含义 |
|---|---|
| `v0.1` | 初稿 |
| `v0.2` | 修改稿 |
| `v1.0` | 用户确认版 |
| `v1.1` | 确认后小修 |

---

## 14. 环境兼容规则

若当前环境不具备文件写入或 Excel/Word/PDF 生成能力，AI 应：①不假装已生成文件；②输出目标路径、文件名和文件内容；③提供替代方案（CSV 内容、Python openpyxl 脚本、Excel 表结构定义、可复制到 Excel 的 Markdown 表格）。

---

## 15. 与 10-update-trigger-rules 的关系

| 规则 | 负责什么 |
|---|---|
| `10-update-trigger-rules.md` | 识别"要不要更新事实源"（→ `ai/`） |
| `11-output-artifact-rules.md` | 识别"要不要生成外部文件/导出物"（→ `ai/outputs/`） |

**示例：** "记录一下，陈佳菁被抽调" → 触发 `10`（更新事实源）；"帮我生成周报" → 触发 `11`（生成输出物）；"帮我生成本周项目集周报，并归档" → 同时触发 `10 + 11`。

## 16. 存储生命周期

`ai/outputs/` 目录瘦身：
- 触发：`ai/outputs/index.md` >100 行 或 目录 >50 个批次
- 动作：将 >90 天且状态为 `已定稿`/`已导出` 的批次移动到 `ai/outputs/archive/YYYY/`
- 状态为 `待确认` 的批次不自动归档（保留现有规则）
- 归档后更新 `ai/outputs/index.md`：归档条目标记为 `[已归档→路径]`

`ai/outputs/index.md` 自身瘦身：
- >200 行时，将 >180 天的已归档条目移至 `ai/outputs/archive/index-archive.md`
